// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch accessibility should expose correct accessibility tree if checked value is set programmatically: Checked 1`] = `
Object {
  "checked": true,
  "name": "Some Label",
  "role": "switch",
}
`;

exports[`switch accessibility should expose correct accessibility tree if checked value is set programmatically: Unchecked 1`] = `
Object {
  "checked": false,
  "name": "Some Label",
  "role": "switch",
}
`;

exports[`switch accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "name": "Some Label",
                      "role": "StaticText",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
    Object {
      "checked": false,
      "children": Array [
        Object {
          "role": "none",
        },
      ],
      "name": "Some Label",
      "role": "switch",
    },
  ],
  "name": "",
  "role": "LabelText",
}
`;
